შესწორება: კომენტარები წაიშალა და Doxygen-ის განლაგების ნებართვები დაემატა

--- a/.github/workflows/doxygen-deploy.yml
+++ b/.github/workflows/doxygen-deploy.yml
@@ -3,7 +3,10 @@ name: Deploy Doxygen to GitHub Pages
 on:
   push:
     branches:
-      - main  # გაეშვება მხოლოდ main ბრენჩზე ცვლილებისას
+      - main
+
+permissions:
+  contents: write
 
 jobs:
   build-and-deploy:
@@ -18,7 +21,6 @@ jobs:
           sudo apt-get install -y doxygen graphviz
 
       - name: Generate Doxygen Documentation
-        # დარწმუნდით, რომ Doxyfile არსებობს პროექტის root-ში
         run: doxygen Doxyfile
 
       - name: Deploy to GitHub Pages
