--- a/.github/workflows/doxygen-deploy.yml
+++ b/.github/workflows/doxygen-deploy.yml
@@ -32,7 +32,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/doxygen_html
+          publish_dir: ./docs/doxygen_html/html
           publish_branch: gh-pages
           allow_empty_commit: false
           user_name: 'github-actions[bot]'
