--- a/.github/workflows/doxygen-deploy.yml
+++ b/.github/workflows/doxygen-deploy.yml
@@ -15,10 +15,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install Doxygen and Graphviz
+      - name: Install Doxygen, Graphviz, and PlantUML dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y doxygen graphviz
+          sudo apt-get install -y doxygen graphviz default-jre
+
+      - name: Download PlantUML
+        run: |
+          wget -O plantuml.jar https://github.com/plantuml/plantuml/releases/latest/download/plantuml.jar
+
+      - name: Make filter script executable
+        run: chmod +x tools/doxygen_filter.py
 
       - name: Generate Doxygen Documentation
         run: doxygen Doxyfile
