feat(core,modules,build): module system full automation, smart conditional build, and interface refactor
- add create_module.py: ავტომატური სკრიპტი ახალი მოდულების გენერირებისთვის (header, source, CMake, Kconfig, module.json)
- add collect_modules.cmake: მოდულების ავტომატური პოვნა, factory-სა და Kconfig.projbuild-ის გენერაცია
- add generated_module_factory.[ch].in: factory-ს template-ები კონდიციური include-ებით
- add test_module: ტესტური მოდული ავტომატური გენერაციით
- add docs/CREATE_MODULE_DOCUMENTATION.md: დეტალური დოკუმენტაცია მოდულების ავტომატური სისტემისთვის

- change core/CMakeLists.txt: COLLECTED_MODULE_DEPENDENCIES ემატება REQUIRES-ში, რათა core-ს ჰქონდეს ყველა ჩართული მოდულის header-ებზე წვდომა
- change logger_module/CMakeLists.txt: დაემატა \"სმარტი\" conditional registration (configure ეტაპზე placeholder, ჩართვისას სრული, გამორთვისას placeholder)
- refactor base_module.h: განახლდა მოდულის ინტერფეისის სტრუქტურა (function pointer-ები, სტატუსები, კონტრაქტი)

- fix: conditional compilation - build-ში მხოლოდ ჩართული მოდულების კოდი ხვდება, გამორთული მოდულები აგენერირებენ placeholder-ს
- fix: CMake configure ეტაპზე build არ ვარდება, ყველა მოდული რეგისტრირდება სწორად
- fix: collect_modules.cmake-ში დაემატა კონდიციური include-ები და factory entries
- fix: create_module.py-ს მიერ გენერირებული კოდი სრულად შეესაბამება base_module.h-ს

BREAKING CHANGE:
- მოდულების დამატება/ამოღება ხდება ავტომატურად, build-ში მოხვდება მხოლოდ ჩართული კოდი, ყველა მოდული ემორჩილება ერთიან ინტერფეისს.
- ყველა ცვლილება დოკუმენტირებულია და ტესტირებულია (test_module, build/reconfigure/menuconfig ციკლი).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,22 @@
-# The following five lines of boilerplate have to be in your project's
-# CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.16)
+
+# First, include the script that will scan modules and define which ones are enabled.
+include(components/core/collect_modules.cmake)
+
+# Now, set the component directories based on the output of the script.
+# This ensures only enabled modules are visible to the build system.
+set(EXTRA_COMPONENT_DIRS
+    components/core
+    components/interfaces
+    ${ENABLED_MODULE_PATHS} # This variable is set by collect_modules.cmake
+    dependencies
+)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(synapse-fmw)
+
+# This adds the -DCONFIG_DHT_USE_FREERTOS_SPINLOCK=1 flag during the compilation of the entire project
+idf_build_set_property(COMPILE_DEFINITIONS
+        "CONFIG_DHT_USE_FREERTOS_SPINLOCK=1"
+        "CONFIG_DHT_RMT_SUPPORT=1"
+        APPEND)
