დაემატა led_blinker მოდული და გაუმჯობესდა კონფიგის მართვა/ფაბრიკა
- დაემატა ახალი led_blinker მოდული (კოდი, linkage, module.json, კონფიგი)
- განახლდა system_config.json led_blinker-ის ჩასართავად
- components/core/config_manager.c-ში დაემატა და შემდგომში წაიშალა debug ლოგები, დაემატა დეტალური ლოგირება JSON parsing-ზე და modules array iteration-ზე, დროებით დაემატა NVS წაშლის კოდი დიაგნოსტიკისთვის
- components/core/module_factory.c-ში დაემატა დეტალური ლოგირება მოდულის შექმნის პროცესზე და დადასტურდა forward declaration სტილის გამოყენება გენერირებული ჰედერისთვის
- MODULE_REGISTRY და MODULE_FACTORY ახლა სწორად ამუშავებს ორივე მოდულს
- საბოლოოდ, სისტემის კონფიგურაცია სწორად იკითხება და აისახება, კოდის სტრუქტურა და ლოგირება გაუმჯობესებულია დიაგნოსტიკისთვის

დოკუმენტაცია: 2025-06-26-led_blinker-nvs-debug.md

--- a/configs/system_config.json
+++ b/configs/system_config.json
@@ -13,6 +13,13 @@
       "config": {
         "instance_name": "main_logger"
       }
+    },
+    {
+      "type": "led_blinker",
+      "enabled": true,
+      "config": {
+        "instance_name": "main_led_blinker"
+      }
     }
   ]
 }
