შეიცვალა და დაემატა test_module

--- a/configs/system_config.json
+++ b/configs/system_config.json
@@ -20,6 +20,13 @@
       "config": {
         "instance_name": "main_led_blinker"
       }
+    },
+    {
+      "type": "test_module",
+      "enabled": true,
+      "config": {
+        "instance_name": "main_test_module"
+      }
     }
   ]
 }
