Add OLED Display and BLE Provisioning Modules
- Introduced the Oled_Display module for OLED display driver functionality, including CMake configuration, Kconfig options, header and source files, and JSON module descriptor.
- Implemented the BLE Provisioning module for BLE-based WiFi provisioning service, with complete functionality, configuration options, and event handling.
- Updated system configuration to enable both modules with default instance names.
- Added partition table for NVS and application storage.
- Enhanced module creation script to include necessary headers for new modules.

--- a/configs/system_config.json
+++ b/configs/system_config.json
@@ -8,6 +8,20 @@
   },
   "modules": [
     {
+      "type": "wifi_manager",
+      "enabled": true,
+      "config": {
+        "instance_name": "main_wifi_manager"
+      }
+    },
+    {
+      "type": "ble_provisioning",
+      "enabled": true,
+      "config": {
+        "instance_name": "main_ble_provisioning"
+      }
+    },
+    {
       "type": "logger_module",
       "enabled": true,
       "config": {
@@ -16,9 +30,16 @@
     },
     {
       "type": "led_blinker",
-      "enabled": true,
+      "enabled": false,
       "config": {
         "instance_name": "main_led_blinker"
+      }
+    },
+    {
+      "type": "oled_display",
+      "enabled": true,
+      "config": {
+        "instance_name": "main_oled_display"
       }
     }
   ]
