--- a/configs/system_config.json
+++ b/configs/system_config.json
@@ -8,6 +8,17 @@
   },
   "modules": [
     {
+      "type": "rgb_led_indicator",
+      "enabled": true,
+      "config": {
+          "instance_name": "status_led",
+          "red_pin": 18,
+          "green_pin": 19,
+          "blue_pin": 5,
+          "is_common_anode": true
+      }
+    },
+    {
       "type": "wifi_manager",
       "enabled": true,
       "config": {
