feat(system): Health Monitor მოდულის იმპლემენტაცია
ამატებს ახალ, სრულფასოვან `health_monitor` მოდულს, რომელიც პასუხისმგებელია სისტემის კრიტიკული პარამეტრების მონიტორინგზე და დიაგნოსტიკაზე.

ეს მოდული მოქმედებს როგორც სისტემის "მცველი" და უზრუნველყოფს შემდეგ ფუნქციონალს:
- **პერიოდული შემოწმება:** გამოყოფილი FreeRTOS ტასკი კონფიგურირებადი ინტერვალით ამოწმებს სისტემის მდგომარეობას.
- **მეხსიერების მონიტორინგი:** აკონტროლებს თავისუფალი Heap-ის რაოდენობას და აგენერირებს alert-ს, თუ ის კრიტიკულ ზღვარს ჩამოსცდება.
- **ტასკების სტეკის ანალიზი:** ამოწმებს ყველა აქტიური ტასკის სტეკის გამოყენების დონეს (High Water Mark) და აფიქსირებს პოტენციურ გადავსებას.
- **Service API:** ამატებს `health_api_t` სერვისს, რომელიც სხვა მოდულებს საშუალებას აძლევს, მიიღონ დეტალური დიაგნოსტიკური რეპორტი.
- **ივენთებზე დაფუძნებული შეტყობინებები:** პრობლემის აღმოჩენისას, აქვეყნებს `SYSTEM_HEALTH_ALERT` ივენთს Event Bus-ზე.

ეს ცვლილება მნიშვნელოვნად ზრდის ფრეიმვორქის საიმედოობასა და გამართვის შესაძლებლობებს.

--- a/configs/system_config.json
+++ b/configs/system_config.json
@@ -52,6 +52,18 @@
           "blue_pin": 5,
           "is_common_anode": true
       }
+    },
+    {
+      "type": "health_monitor",
+      "enabled": true,
+      "config": {
+          "instance_name": "health_monitor",
+          "check_interval_sec": 60,
+          "thresholds": {
+              "min_free_heap_kb": 40,
+              "task_stack_watermark_percent": 90
+          }
+      }
     }
   ]
 }
