შეიცვალა კონფიგურაციის სახელები Kconfig ფაილებში

--- a/components/modules/system/health_monitor/Kconfig
+++ b/components/modules/system/health_monitor/Kconfig
@@ -1,4 +1,4 @@
-menu "Health Monitor Module Configuration"
+menu "Health Monitor"
 
     config MODULE_HEALTH_MONITOR_ENABLED
         bool "Enable Health Monitor Module"
