feat(storage)!: introduce multi-backend Storage Manager and refactor framework
This major architectural update introduces a universal, multi-backend Storage Manager, refactors key modules to use it, and enhances the overall robustness and modularity of the Synapse Framework.

### ✨ Features

- **storage:** A new `Storage Manager` module provides a unified service API (`storage_api_t`) for data persistence. It uses a Strategy Pattern to support NVS, SPIFFS, and SD Card backends, selectable via Kconfig. The API supports both key-value and file-based operations.

- **ble_prov:** The `ble_provisioning` module now exposes a Service API (`ble_prov_api_t`) allowing other modules to programmatically query its status (`is_provisioning_active`) and initiate the provisioning process (`start_provisioning`).

- **wifi:** The `wifi` CLI command has been significantly extended with new subcommands for advanced diagnostics and control, including `scan`, `erase_creds`, `set_hostname`, and `set_power_save`.

### 🐛 Bug Fixes

- **provisioning:** Resolved a critical bug where the BLE provisioning process would not complete successfully in the client application. The system now relies on the internal ESP-IDF mechanism to report connection success.

- **spiffs:** Fixed an `ENOTSUP` error when creating directories on the SPIFFS backend by removing the unnecessary `mkdir` call.

- **rgb_led:** Corrected a race condition by making the `rgb_led_indicator` check the `ble_provisioning` service status on startup, rather than relying solely on events.

### ♻️ Refactoring

- **wifi:** The `wifi_manager` has been refactored to use the new abstract `Storage Manager` service, completely decoupling it from the underlying NVS/SPIFFS implementation.

### 📄 Documentation

- **storage, ble_prov, wifi:** Created and updated `README.md` and API reference files to reflect the new architecture and features.
- **convention:** Added `initialization_levels.md` to standardize the module initialization order.

BR

--- a/components/modules/communications/wifi_manager/CMakeLists.txt
+++ b/components/modules/communications/wifi_manager/CMakeLists.txt
@@ -24,6 +24,7 @@ if(DEFINED CONFIG_MODULE_WIFI_MANAGER_ENABLED)
                 esp_event
                 nvs_flash
                 wifi_provisioning
+                storage_manager
             PRIV_REQUIRES
                 json
                 esp_system
@@ -55,6 +56,7 @@ else()
             esp_event
             nvs_flash
             wifi_provisioning
+            storage_manager
         PRIV_REQUIRES
             json
             esp_system
