feat(timer): add System Timer Service and test module
This commit introduces a new core utility, the System Timer Service, which provides a centralized and decoupled mechanism for scheduling events. A dedicated test module has also been added to demonstrate and verify its functionality.

### ✨ Features

- **System Timer Service (`system_timer`):**
  - A new service module that abstracts the `esp_timer` component.
  - Exposes a `timer_api_t` service via the Service Locator.
  - Allows any module to schedule one-shot or periodic events to be posted on the Event Bus using `schedule_event()`.
  - Provides a mechanism to cancel scheduled timers with `cancel_event()`.
  - Reduces resource usage by centralizing timer management and simplifies the implementation of periodic tasks for consumer modules.

- **Timer Test Module (`timer_test`):**
  - A new testing module that demonstrates the integration of multiple services.
  - On startup, it uses the `system_timer` service to schedule a periodic event.
  - In its event handler, it uses the `rgb_led_indicator` service to toggle the LED's color, providing a clear visual confirmation that the timer service is working correctly.

### 📄 Documentation

- Added comprehensive `README.md` files for both the `system_timer` and `timer_test` modules.
- Created the `timer_interface.h` to define the public API contract.
- Updated the main API index to include the new service.

--- a/configs/system_config.json
+++ b/configs/system_config.json
@@ -84,6 +84,20 @@
       "config": {
         "instance_name": "main_storage"
       }
+    },
+    {
+      "type": "system_timer",
+      "enabled": true,
+      "config": {
+        "instance_name": "main_timer_service"
+      }
+    },
+    {
+      "type": "timer_test",
+      "enabled": true,
+      "config": {
+        "instance_name": "main_timer_test"
+      }
     }
   ]
 }
