feat(system): Add device identity service and fix event bus
This commit introduces the new `device_identity_service` module and resolves a critical bug in the Event Bus that was preventing it from functioning correctly.

**Features:**

-   **New `device_identity_service` Module:**
    -   Provides a centralized service via Service Locator to retrieve the device's unique ID (from MAC) and firmware version.
    -   Includes a `device info` CLI command for easy diagnostics.
    -   Uses a delayed registration pattern by subscribing to `FMW_EVENT_SYSTEM_START_COMPLETE` to register its command.

**Bug Fixes & Improvements:**

1.  **Fixed Event Bus Dispatch Logic:**
    -   The `if/else if` block in `dispatch_event_to_subscribers` was incorrectly preventing both specific and wildcard subscribers from being notified.
    -   This has been replaced with two independent `if` statements, ensuring all subscribers receive the event. This was the root cause of the command registration failure.

2.  **Centralized Event Definitions:**
    -   Introduced `framework_events.h` to define all core event names as macros, eliminating "magic strings".
    -   Refactored relevant modules to use these macros, improving code robustness and maintainability.

3.  **Stabilized Main Task Lifecycle:**
    -   Modified `app_main` to include a `while(1)` loop with `vTaskDelay`. This prevents the main task from exiting prematurely and ensures the reliable execution of background tasks like the Event Bus.

With these changes, the `device_identity_service` is now fully functional, and the core eventing system is significantly more robust.

--- a/configs/system_config.json
+++ b/configs/system_config.json
@@ -127,6 +127,13 @@
               }
           ]
       }
+    },
+    {
+      "type": "device_identity_service",
+      "enabled": true,
+      "config": {
+          "instance_name": "main_identity_service"
+      }
     }
   ]
 }
