--- a/configs/system_config.json
+++ b/configs/system_config.json
@@ -134,6 +134,21 @@
       "config": {
           "instance_name": "main_identity_service"
       }
+    },
+    {
+      "type": "mqtt_manager",
+      "enabled": true,
+      "config": {
+          "instance_name": "main_mqtt_broker",
+          "broker_uri": "mqtt://192.168.1.160:1883",
+          "username": "",
+          "password": "",
+          "base_topic_prefix": "synapse/devices",
+          "lwt_topic": "lwt",
+          "lwt_message": "{\"status\":\"offline\"}",
+          "lwt_qos": 1,
+          "lwt_retain": true
+      }
     }
   ]
 }
