feat(diagnostics): Add comprehensive Self Test Manager module
This commit introduces a new, powerful system module: `self_test_manager`.
This module provides a centralized, on-demand diagnostic framework to verify the health and functionality of core services and subsystems.

Key Features:
- **CLI-Driven:** Fully controllable via a new `selftest` command registered with the `Command Router`. Supports running all tests or specific suites (`--run [all|core|health|storage|conn]`).
- **Non-Blocking Execution:** Tests are executed in a dedicated FreeRTOS task to prevent blocking the main application or the interactive shell.
- **Request-Response over MQTT:** The `--report` command now publishes the test results as a JSON payload to the Event Bus via a new `FMW_EVENT_SELF_TEST_REPORT_READY` event.
- **Extensible Test Suites:** Includes initial checks for core services, system health (via `health_monitor`), storage subsystem, and connectivity (WiFi/MQTT status). The architecture is designed for easy addition of new test suites.

Architectural Improvements:
- **MQTT Integration:** The `mqtt_manager` is updated to listen for the new report event and publish the JSON results to a dedicated MQTT topic (`.../data/selftest/report`), completing the remote request-response cycle.
- **Standardized Payload:** A new `fmw_telemetry_payload_t` structure is introduced in `event_payloads` to create a standard for all event-driven JSON data transfers.
- **Decoupling:** Refactored `mqtt_manager` and `self_test_manager` to use `fmw_service_lookup_by_type` instead of hardcoded service names, improving flexibility and adhering to architectural principles.

Bug Fixes:
- Resolved a linker error (`undefined reference`) by adding `event_payloads.c` to the core component's build.
- Fixed a `File or path name too long` error in the storage test by correctly parsing and using the module's instance name.
- Corrected a `initializer element is not constant` error in the CLI command registration logic.


--- a/components/core/CMakeLists.txt
+++ b/components/core/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SRCS
     "resource_manager.c"
     "event_data_wrapper.c"
     "service_locator.c"
+    "event_payloads.c"
 )
 
 # ჩასვით სკრიპტი, რომელიც ავტომატურად აღმოაჩენს მოდულებს და გენერირებს factory-ს.
