feat(sensors): Add Sensor Aggregator and Simulator modules
This commit introduces two major modules that significantly enhance the framework's data processing capabilities and testability.

**1. New Module: `sensor_aggregator`**

A new, powerful module has been added to centralize sensor data collection.

- **Core Functionality:** Listens for individual sensor events, collects their data into a single snapshot, and publishes a consolidated report.
- **Configurable Strategies:** Supports two aggregation strategies defined in `system_config.json`:
    - `time_window`: Publishes a report at a fixed time interval.
    - `on_trigger`: Publishes a report only when a specific trigger event occurs.
- **System Integration:** Utilizes the `System Timer Service` for timed aggregation and is fully integrated with the `Event Bus` for receiving and publishing data.
- **MQTT Ready:** Aggregated reports are automatically published to a dedicated MQTT topic via the `mqtt_manager` by defining an `mqtt_interface` in the module's `module.json`.

**2. New Module: `sensor_simulator`**

A new testing module has been added to facilitate development without physical hardware.

- **Hardware Emulation:** Simulates the behavior of temperature, humidity, and light sensors.
- **Periodic Events:** Uses the `System Timer Service` to periodically publish mock sensor data, providing a consistent data stream for testing consumer modules like the `sensor_aggregator`.

**3. Architectural Improvements & Bug Fixes**

- **fix(aggregator):** Resolved a critical bug that caused duplicated keys in the aggregated JSON report. The logic now uses `cJSON_ReplaceItemInObject` to ensure each sensor value is updated rather than appended.
- **improve(core):** Centralized the aggregator's output event name into `framework_events.h` as `FMW_EVENT_AGGREGATED_SENSOR_REPORT`, removing the hardcoded string from the configuration and preventing potential truncation/typo errors.
- **fix(simulator):** Fixed compilation error

--- a/configs/system_config.json
+++ b/configs/system_config.json
@@ -186,6 +186,36 @@
         "instance_name": "selftest",
         "storage_service_instance": "main_storage"
       }
+    },
+    {
+      "type": "sensor_aggregator",
+      "enabled": true,
+      "config": {
+        "instance_name": "main_aggregator",
+        "aggregation_strategy": "time_window",
+        "aggregation_period_sec": 30,
+        "sensors_to_aggregate": [
+          {
+            "event_name": "SENSOR_DATA_TEMPERATURE",
+            "json_key": "temperature"
+          },
+          {
+            "event_name": "SENSOR_DATA_HUMIDITY",
+            "json_key": "humidity"
+          },
+          {
+            "event_name": "SENSOR_DATA_LIGHT",
+            "json_key": "light_lux"
+          }
+        ]
+      }
+    },
+    {
+      "type": "sensor_simulator",
+      "enabled": true,
+      "config": {
+          "instance_name": "main_sensor_sim"
+      }
     }
   ]
 }
