--- a/configs/system_config.json
+++ b/configs/system_config.json
@@ -1,6 +1,6 @@
 {
   "firmware": {
-    "version": "3.8.0",
+    "version": "3.9.0",
     "description": "Implemented Service Locator pattern for I2C bus decoupling."
   },
   "global_config": {
@@ -226,6 +226,13 @@
       "enabled": true,
       "config": {
           "instance_name": "main_sensor_sim"
+      }
+    },
+    {
+      "type": "security_status_reporter",
+      "enabled": true,
+      "config": {
+          "instance_name": "main_security_status"
       }
     }
   ]
