feat: Add Relay Actuator and enhance framework capabilities
This commit introduces the `relay_actuator` module, enabling physical world interaction, and the `security_status_reporter` for hardware security monitoring. It also enhances the MQTT manager to support dynamic topics for multi-instance modules.

**1. New Module: `relay_actuator`**

A fundamental actuator module to control relays via GPIO.

- **Multi-Instance Support:** The architecture allows for configuring and controlling multiple independent relay instances, each identified by a unique `instance_name`.
- **CLI Control:** Integrates with the `Command Router` to provide the `relay <instance_name> <on|off|toggle>` command for interactive control.
- **State Persistence:** Optionally uses the `Storage Manager` to save and restore the last known state across reboots (`initial_state: "last"`).
- **Event-Driven Status:** Publishes `FMW_EVENT_RELAY_STATE_CHANGED` on every state change, enabling seamless status updates via MQTT.

**2. New Module: `security_status_reporter`**

A core security module to report on hardware security features.

- **Status Caching:** Reads and caches the state of Secure Boot and Flash Encryption at startup.
- **Service API:** Exposes a `FMW_SERVICE_TYPE_SECURITY_API` for other modules to programmatically query the device's security posture.
- **Remote Reporting:** Adds a `security status` command and a corresponding `FMW_EVENT_SECURITY_STATUS_READY` event for remote monitoring.

**3. Architectural Enhancements**

- **Dynamic MQTT Topics:** The `mqtt_manager` has been refactored to support a `{module_name}` placeholder in topic templates. It now dynamically constructs topics using the `instance_name` provided in the event payload, which is crucial for multi-instance modules like the `relay_actuator`.
- **`selftest` Integration:** The `self_test_manager` now includes a new suite to verify the device's security status by consuming the `security_status_reporter` service.

**4. Documentatio

--- a/configs/system_config.json
+++ b/configs/system_config.json
@@ -1,6 +1,6 @@
 {
   "firmware": {
-    "version": "3.9.0",
+    "version": "4.0.0",
     "description": "Implemented Service Locator pattern for I2C bus decoupling."
   },
   "global_config": {
@@ -233,6 +233,16 @@
       "enabled": true,
       "config": {
           "instance_name": "main_security_status"
+      }
+    },
+    {
+      "type": "relay_actuator",
+      "enabled": true,
+      "config": {
+          "instance_name": "main_light",
+          "gpio_pin": 23,
+          "active_level": 0,
+          "initial_state": "off"
       }
     }
   ]
